Fixes text size and button alignment on the homepage header

--- a/assets/scss/sections/_home.scss
+++ b/assets/scss/sections/_home.scss
@@ -27,21 +27,43 @@
 
     .h1 {
         color: #fff;
+        font-size: 2rem;
         line-height: 1em;
-        margin: 0 0 1.5rem 0;
         text-align: center;
+        margin: 0 0 .5rem 0;
 
         @include breakpoint(large) {
             font-size: 3.75rem;
             width: 66%;
             text-align: left;
+            margin: 0 0 1.5rem 0;
         }
     }
 
     p.subtitle {
         color: #44afa0;
-        font-size: 1.94rem;
         margio-bottom: 1.5rem;
+        font-size: 1.25rem;
+        text-align: center;
+
+        @include breakpoint(large) {
+            font-size: 1.94rem;
+            width: 66%;
+            text-align: left;
+        }
+    }
+
+    p.app-links {
+        text-align: center;
+
+        img {
+            display: inline-block;
+            margin-bottom: .5rem;
+        }
+
+        @include breakpoint(large) {
+            text-align: left;
+        }
     }
 
     .scroll-link-container {
