--- a/theme/style.css
+++ b/theme/style.css
@@ -2795,11 +2795,19 @@ body.error404 .search-form { margin: 0 0 1rem; }
 
 .hero .grid-container { z-index: 10; width: 100%; }
 
-.hero .h1 { color: #fff; line-height: 1em; margin: 0 0 1.5rem 0; text-align: center; }
+.hero .h1 { color: #fff; font-size: 2rem; line-height: 1em; text-align: center; margin: 0 0 .5rem 0; }
 
-@media print, screen and (min-width: 64em) { .hero .h1 { font-size: 3.75rem; width: 66%; text-align: left; } }
+@media print, screen and (min-width: 64em) { .hero .h1 { font-size: 3.75rem; width: 66%; text-align: left; margin: 0 0 1.5rem 0; } }
 
-.hero p.subtitle { color: #44afa0; font-size: 1.94rem; margio-bottom: 1.5rem; }
+.hero p.subtitle { color: #44afa0; margio-bottom: 1.5rem; font-size: 1.25rem; text-align: center; }
+
+@media print, screen and (min-width: 64em) { .hero p.subtitle { font-size: 1.94rem; width: 66%; text-align: left; } }
+
+.hero p.app-links { text-align: center; }
+
+.hero p.app-links img { display: inline-block; margin-bottom: .5rem; }
+
+@media print, screen and (min-width: 64em) { .hero p.app-links { text-align: left; } }
 
 .hero .scroll-link-container { display: none; text-transform: uppercase; font-size: .2rem; }
 
